# pysollya

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: rvbna_experiments.py
pysollya/: __init__.py  _pysollya.pyx  csollya.pxd
sollya-8.0/: Makefile.am  Makefile.in  aclocal.m4  assignment.c  assignment.h  autodiff.c  autodiff.h  base-functions.c  base-functions.h  bitfields.c  bitfields.h  chain.c  chain.h  chebyshevform.c  chebyshevformaux.c  chebyshevformaux.h  config.h.in  configure  configure.ac  double.c  double.h  execute.c  execute.h  expression.c  expression.h  external.c  external.h  fplll_wrapper.cpp  fplll_wrapper.h  fpminimax.c  fpminimax.h  general.c  general.h  hash.c  hash.h  help.h  hooks.c  hooks.h  implement.c  implement.h  (+55 more)
sollya-8.0/doc/: Makefile.in
sollya-8.0/tests-lib/: Makefile.in
sollya-8.0/tests-tool/: Makefile.in
tests/: test_basic.py
