[build-system]
requires = ["setuptools>=42", "cython>=0.29"]
build-backend = "setuptools.build_meta"

[project]
name = "pysollya"
version = "0.1.0"
description = "Self-contained Python wrapper for the Sollya library"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
